--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -49,6 +49,13 @@
 
  /* header */
 
+ #logout {
+  cursor: default;
+  &:hover {
+    background-color: transparent;
+  }
+}
+
  .navbar-inverse {
    background-color: $navbar-color;
  }
